부트스트랩 템플릿 적용 및 메인페이지 추가

--- a/eSonicEcm/src/main/resources/application.properties
+++ b/eSonicEcm/src/main/resources/application.properties
@@ -18,11 +18,10 @@ logging.level.org.mybatis=DEBUG
 logging.level.java.sql=DEBUG
 
 # timeleaf
-
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
-#spring.thymeleaf.enabled=true
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.suffix=.html
+spring.thymeleaf.check-template-location=true
 
 
 logging.file.name=eSonicEcm.log
