Redis 사용을 위한 셋팅 1

--- a/eSonicEcm/src/main/resources/application.properties
+++ b/eSonicEcm/src/main/resources/application.properties
@@ -29,7 +29,7 @@ logging.file.path=D:\log
 logging.level.com.eSonic.ecm.util=DEBUG
 
 ###Spring Redis###
-spring.redis.host=localhost
+spring.redis.host=192.168.0.245
 spring.redis.port=6379
 
 
