--- a/eSonicEcm/src/main/resources/application.properties
+++ b/eSonicEcm/src/main/resources/application.properties
@@ -28,6 +28,11 @@ logging.file.name=eSonicEcm.log
 logging.file.path=D:\log
 logging.level.com.eSonic.ecm.util=DEBUG
 
+###Spring Redis###
+spring.redis.host=192.168.0.245
+spring.redis.port=6379
+
+
 ### jpa setting ###
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 #사용하는 DB에 따라 변경 
